# if_challenge

./: README.md
LaneObject/: .gitignore  CMakeLists.txt  README.md  calibration_file.xml  normalisation.xml
LaneObject/include/: car_detector.hpp  clasifier.hpp  lane_lines.hpp
LaneObject/results/: features_diagram.xml
LaneObject/src/: calibration.cpp  camera_matrix.cpp  car_detector.cpp  cars.cpp  clasifier.cpp  lane.cpp  lane_lines.cpp  main.cpp  polyfit.cpp  train_clasifier.cpp
ROSBasics/: .gitignore  README.md
ROSBasics/plots/: diagrams.drawio
ROSBasics/src/ros_basics/: CMakeLists.txt  package.xml
ROSBasics/src/ros_basics/cfg/: Rate.cfg
ROSBasics/src/ros_basics/scripts/: py_publisher.py  py_subscriber.py
ROSBasics/src/ros_basics/src/: cpp_publisher.cpp  cpp_subscriber.cpp
ScanMatching/: README.md
ScanMatching/data/: diagram
ScanMatching/scripts/: icp_matching.py  points.npy  points2.npy  points_ref.npy  points_ref2.npy
